--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "firebase-admin",
-  "version": "8.6.0",
-  "description": "Firebase admin SDK for Node.js",
+  "name": "firebase-admin-https",
+  "version": "8.6.0-https",
+  "description": "Firebase admin SDK for Node.js with https",
   "author": "Firebase <firebase-support@google.com> (https://firebase.google.com/)",
   "license": "Apache-2.0",
   "homepage": "https://firebase.google.com/",
